ecmascript/parser/tests/test262-error-references/fail/2cbdd5fad4e5332d.js.stderr
error: TS1009
 --> $DIR/tests/test262-parser/fail/2cbdd5fad4e5332d.js:2:4
  |
2 |   y,;
  |    ^

